tests/Functional/Transformer/SyntaxErrorInTransformedClass/Target.php
<?php

namespace Okapi\CodeTransformer\Tests\Functional\Transformer\SyntaxErrorInTransformedClass;

class Target
{
}
